@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Skill {
    - name: String

    + Skill(name)
}
class RegisterSkillUI {

}

class RegisterSkillController {
    + CreateSkillController(skillRepository)
    + registerSkill(name)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository() : Repositories
}

class SkillRepository {
    + register()
}


RegisterSkillUI .> RegisterSkillController
RegisterSkillController .> Repositories : repositories
Repositories --> Repositories : instance
Repositories "1" --> "1" SkillRepository
SkillRepository o-- "*" Skill : has
RegisterSkillController .> SkillRepository : skillRepository
RegisterSkillController .> Skill : skill
@enduml